--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,11 @@
 fastapi>=0.104.1
 uvicorn[standard]>=0.24.0
 pydantic>=2.5.0
+gunicorn>=21.2.0
+
+# Production server enhancements
+uvloop>=0.19.0
+httptools>=0.6.0
 
 # AI/ML and graph frameworks
 langgraph>=0.2.16
@@ -30,8 +35,17 @@ pdfplumber>=0.9.0
 pytest>=7.4.3
 pytest-asyncio>=0.21.1
 
-# Optional dependencies for enhanced functionality
-openai>=1.0.0  # Direct OpenAI API client if needed
-requests>=2.31.0  # For HTTP requests in services
-lxml>=4.9.0  # Enhanced XML/HTML parsing
-pillow>=10.0.0  # Image processing for documents
+# Production dependencies
+openai>=1.0.0
+requests>=2.31.0
+lxml>=4.9.0
+pillow>=10.0.0
+
+# Monitoring and logging
+structlog>=23.2.0
+
+# Security
+cryptography>=41.0.0
+
+# File type detection
+python-magic>=0.4.27
